--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -17,7 +17,7 @@
 <body>
 
   <header class="fw-bold"> 
-    <nav class="navbar fixed-top" style="background-color: #e8c8c8;">
+    <nav class="navbar fixed-top" style="background-color:#EEA5A6;">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html"><span class="text-primary">MailinSweets</span></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
