--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Los mejores postres para todos los gustos en el area de Villa Crespo capital federal Buenos aires Argentina haz tu pedido">
+    <meta name="description" content="Dedicacion y esfuerzo es nuestro lema para que tus postres sean inigualables y soprendan tu paladar realizado con las mejores tecnicas e ingredientes">
     <meta name="keywords" content="budines, tortas, macarones, hojaldres, postres, dulces, azucar, comida">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
