--- a/pages/menu.html
+++ b/pages/menu.html
@@ -53,14 +53,36 @@
     <main>
         <h1 class="menu">Menu</h1>
         <section class="contenido2">
-          <div class="menu1 img3"></div>
-          <p class="menu1 p3">Dulce que se hace con fecula de maiz, leche y azúcar, y se cuaja en el baño de María, dentro de un molde generalmente bañado de azúcar tostada. Suele llevar también harina, y con frecuencia se le añade algún otro ingrediente, como café, naranja, vainilla, etcétera.</p>
-          <div class="menu1 img4"></div>
-          <p class="menu1 p4">Cremoso y compacto, el cheesecake se compone de una pasta preparada a partir de bizcocho seco desmenuzado, mantequilla y azúcar. Extendido en un molde de tarta, este fondo se rellena a continuación con (queso blanco espeso elaborado en Estados Unidos), mezclado con huevos y azúcar.</p>
-          <div class="menu1 img5"></div>
-          <p class="menu1 p5">El hojaldre es una masa crujiente elaborada con harina, agua, sal y una materia grasa como pueden ser la mantequilla, margarina o manteca de cerdo. Su gran atractivo es la textura crujiente que la caracteriza por sobre otras masas. Para lograr esa textura final se prepara una masa de harina, agua y sal que se extiende.</p>
-          <div class="menu1 img6"></div>
-          <p class="menu1 p6">Consiste en una crema suave y espumosa, que se sirve sola o se utiliza para rellenar tartas dulces. Este postre se puede elaborar con chocolate blanco o negro, dependiendo el resultado final de la calidad del chocolate empleado.</p>
+          <div class="container">
+            <div class="row justify-content-md-center">
+              <div class="img3 col col-lg-5"></div>
+              <div class="p3 col col-lg-5">
+                <p>Dulce que se hace con fecula de maiz, leche y azúcar, y se cuaja en el baño de María, dentro de un molde generalmente bañado de azúcar tostada. Suele llevar también harina, y con frecuencia se le añade algún otro ingrediente, como café, naranja, vainilla, etcétera.
+                </p>
+              </div>
+            </div>
+            <div class="row justify-content-md-center">
+              <div class="img4 col col-lg-5"></div>
+              <div class="p4 col col-lg-5">
+                <p>Cremoso y compacto, el cheesecake se compone de una pasta preparada a partir de bizcocho seco desmenuzado, mantequilla y azúcar. Extendido en un molde de tarta, este fondo se rellena a continuación con, mezclado con huevos y azúcar.
+                </p>
+              </div>
+            </div>
+            <div class="row justify-content-md-center">
+              <div class="img5 col col-lg-5"></div>
+              <div class="p5 col col-lg-5">
+                <p>Consiste en una crema suave y espumosa, que se sirve sola o se utiliza para rellenar tartas dulces. Este postre se puede elaborar con chocolate blanco o negro, dependiendo el resultado final de la calidad del chocolate empleado.
+                </p>
+              </div>
+            </div>
+            <div class="row justify-content-md-center">
+              <div class="img6 col col-lg-5"></div>
+              <div class="p6 col col-lg-5">
+                <p>El hojaldre es una masa crujiente elaborada con harina, agua, sal y una materia grasa como pueden ser la mantequilla, margarina o manteca de cerdo. Su gran atractivo es la textura crujiente que la caracteriza por sobre otras masas.
+                </p>
+              </div>
+            </div>
+          </div>
           </section>
 </main>
 
